--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,9 @@
   --radius-xl: calc(var(--radius) + 4px);
   --animate-accordion-down: accordion-down 0.2s ease-out;
   --animate-accordion-up: accordion-up 0.2s ease-out;
+  --background-end-rgb: var(----background-end-rgb);
+  --background-start-rgb: var(----background-start-rgb);
+  --foreground-rgb: var(----foreground-rgb);
 
   @keyframes accordion-down {
     from {
@@ -112,6 +115,9 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
 }
 
 .dark {
